# super-simple-pr-agent

./: Dockerfile  Dockerfile.github_action_dockerhub  LICENSE  README.md  pyproject.toml
.github/workflows/: build_action.yaml
sspr/: agent.py  config.py  git.py  prompt.py  prompt.txt  run_agent.py  utils.py
sspr/tests/: diff_test.txt  test_agent_local.py
