[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sspr*"]

[project]
name = "sspr"
version = "0.0.1"
dependencies = [
    'litellm>=1.31.10',
    'loguru==0.7.2',
    'mdformat-gfm==0.3.6',
    'pydantic==2.7.3',
]

[project.optional-dependencies]

testing=[
    "pytest",
]
